--- a/render.yaml
+++ b/render.yaml
@@ -9,4 +9,10 @@ services:
         sync: false
       - key: PYTHON_VERSION
         value: 3.10.12
+      - key: RENDER
+        value: true
+    disk:
+      name: data
+      mountPath: /var/data
+      sizeGB: 1
     autoDeploy: true
